# dev-containers-demo

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
templates/: index.html
